Closed Bug 357443 Opened 18 years ago Closed 18 years ago

uninitialized variable valgrind warning in gfxFontGroup::ForEachFontInternal

Categories

(Core :: Graphics, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: valgrind, Whiteboard: [patch])

Attachments

(1 file)

Starting up, I'm seeing:

==25135== Conditional jump or move depends on uninitialised value(s)
==25135==    at 0x40788DA: gfxFontGroup::ForEachFontInternal(nsAString_internal const&, nsACString_internal const&, int, int (*)(nsAString_internal const&, nsACString_internal const&, nsACString_internal const&, void*), void*) (/builds/trunk/mozilla/gfx/thebes/src/gfxFont.cpp:174)
==25135==    by 0x40791EC: gfxFontGroup::ForEachFont(int (*)(nsAString_internal const&, nsACString_internal const&, nsACString_internal const&, void*), void*) (/builds/trunk/mozilla/gfx/thebes/src/gfxFont.cpp:67)
==25135==    by 0x4082634: gfxPangoFontGroup::gfxPangoFontGroup(nsAString_internal const&, gfxFontStyle const*) (/builds/trunk/mozilla/gfx/thebes/src/gfxPangoFonts.cpp:142)
...

Patch coming.
Attached patch patchSplinter Review
Attachment #242921 - Flags: review?(vladimir)
Summary: valgrind warning in gfxFontGroup::ForEachFontInternal → uninitialized variable valgrind warning in gfxFontGroup::ForEachFontInternal
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.9alpha
Attachment #242921 - Flags: review?(vladimir) → review+
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Wow, thank you for the fix, that is my mistake...
Keywords: valgrind
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: