Fix uninitialized variable.  b=357443  r=pavlov